fix: Change overflow to hidden to hide scrollbars.

--- a/project/src/app/app.component.css
+++ b/project/src/app/app.component.css
@@ -12,7 +12,7 @@
 
 #output {
     height: 660px;
-    overflow: scroll;
+    overflow: hidden;
     margin:0px 0px 22px 0px;
 }
 
